# research-auto

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/superpowers/plans/: 2026-04-20-stream-first-s3-download.md  2026-04-21-cli-redesign.md  2026-04-21-datalab-parser.md  2026-04-21-manual-pdf-upload.md  2026-04-29-paper-star.md  2026-04-29-resolution-service-first-tests.md
docs/superpowers/specs/: 2026-04-21-cli-redesign-design.md  2026-04-21-datalab-parser-design.md  2026-04-21-manual-pdf-upload-design.md  2026-04-29-resolution-service-first-tests-design.md
k8s/: research-auto.yaml
scripts/: trigger_pipeline.py
src/research_auto/: __main__.py  api.py  cli.py  config.py  db.py  jobs.py  llm.py  models.py  parsers.py  resolvers.py  schema.py
src/research_auto/adapters/: __init__.py  crawler.py  parsing.py  pipeline_repository.py  queue.py  read_models.py  resolution.py  sql.py  summarization.py
src/research_auto/application/: admin_actions.py  job_executor.py  llm.py  llm_prompts.py  llm_types.py  ports.py  (+3 more)
static/: app.css
templates/: base.html
templates/pages/: admin.html  home.html  jobs.html  paper_detail.html  papers.html  search.html  stats.html
templates/partials/: paper_row.html  paper_table.html  status_badge.html  summary_block.html
tests/: test_adapter_logging.py  test_admin_actions.py  test_cli.py  test_frontend.py  test_job_executor.py  test_llm_module.py  test_llm_prompts.py  test_llm_provider.py  test_manual_pdf_upload.py  test_mcp_server.py  test_pdf_parser.py  test_postgres_repositories.py  test_query_services.py  test_researchr.py  test_resolution_adapters.py  test_resolution_service.py  test_schema.py  test_storage_adapters.py  test_storage_contracts.py  test_worker_config.py
(+42 files in other folders)
