[project]
name = "research-auto"
version = "0.1.0"
description = "Conference paper discovery and reading pipeline prototype"
readme = "README.md"
authors = [
    { name = "panxiao81", email = "pan-xiao@live.cn" }
]
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "litellm>=1.81.13",
    "playwright>=1.54.0",
    "pypdf>=5.4.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
research-auto = "research_auto.interfaces.cli.app:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
